--- a/templates/Base/index.html
+++ b/templates/Base/index.html
@@ -1,21 +1,69 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h2>Hello</h2>
-    <p>Currently logged in as {{request.user}}</p>
-    <a href="{% url 'logout' %}">Logout</a>
-    <hr>
 
+    <style>
+        .container {
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+        }
+
+        .roomWrapper {
+            display: flex;
+            flex-direction: column;
+            max-width: 400px;
+            gap: 4px;
+            background-color: lightblue;
+            margin-top: 12px;
+            padding: 8px;
+        }
+
+        .roomWrapper a {
+            color: brown;
+            text-decoration: none;
+
+        }
+
+        .btnWrapper {
+            display: flex;
+            justify-content: space-around;
+            padding: 8px;
+        }
+
+        .topicWrapper {
+            padding: 0 16px;
+            align-items: center;
+            gap: 64px;
+            display: flex;
+        }
+    </style>
+<div class="container">
     <div class="topics">
+        <h2 style="text-align: center;">Topics</h2>
+        <a href="{% url 'index' %}" style="padding: 0 16px;">All</a>
         {% for topic in topics %}
-            <a href="{% url 'index' %}?q={{topic}}">{{topic}} - FOLLOW</a>
+        <div class="topicWrapper">
+            <a href="{% url 'index' %}?q={{topic}}">{{topic}}</a>
+            <p>Follow</p>
+        </div>
         {% endfor %}
     </div>
-    <ul>
+
+    <div>
+        <h2 style="text-align: center;">Rooms</h2>
         {% for room in rooms %}
-            <li><a href="{% url 'room' room.id %}">{{room.name}} | {{room.host}}</a></li>
-            <li><a href="{% url 'delete-room' room.id %}">Delete</a> | <a href="{% url 'edit-room' room.id %}">Edit</a></li>
-            <hr>
+            <div class="roomWrapper">
+                <a href="{% url 'room' room.id %}">{{room.name}}, by {{room.host}}</a>
+                <div class="btnWrapper">
+                    {% if room.host == request.user %}
+                        <a href="{% url 'delete-room' room.id %}">Delete</a>
+                        <a href="{% url 'edit-room' room.id %}">Edit</a>
+                    {% endif %}
+                </div>
+                <hr>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
+</div>
+
 {% endblock%}
