--- a/templates/Base/index.html
+++ b/templates/Base/index.html
@@ -6,6 +6,7 @@
         .container {
             display: grid;
             grid-template-columns: 1fr 3fr;
+            color: white;
         }
 
         .roomWrapper {
@@ -51,6 +52,9 @@
 
     <div>
         <h2 style="text-align: center;">Rooms</h2>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}" style="color: yellow;">Logout</a>
+        {% endif %}
         {% for room in rooms %}
             <div class="roomWrapper">
                 <a href="{% url 'room' room.id %}">{{room.name}}, by {{room.host}}</a>
