--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/general.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>StudyBud</title>
+    {% block style %}
+    {% endblock%}
 </head>
 <body>
+    
+    {% include 'nav.html' %}
+
     {% if messages %}
         <ul class="messages">
         {% for message in messages %}
@@ -14,7 +24,7 @@
         {% endfor %}
         </ul>
     {% endif %}
-    {% include 'nav.html' %}
+
     {% block content %}
     {% endblock %}
 </body>
