Changed 'search' to 'q' (query)

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
     <nav>
         <a id="logo" href="{% url 'index' %}"">StudyBud</a>
         <form id="search" action="" method="get">
-            <input type="text" name="Search" placeholder="Search..." id="searchInput">
+            <input type="text" name="q" placeholder="Search..." id="searchInput">
         </form>
         <div id="user">
 
