--- a/templates/Base/register.html
+++ b/templates/Base/register.html
@@ -1,10 +1,62 @@
 {% extends 'layout.html' %}
+{% load static %}
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'styles/register.css' %}">
+{% endblock %}
 
 {% block content %}
-    <form action="" method="post">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Submit</button>
-        <a href="{% url 'login' %}">Login?</a>
-    </form>
+<main>
+    <div id="registerContainer">
+        <div class="heading">
+            <h1>Register</h1>
+        </div>
+        <div class="content">
+            <form action="" method="post" class="registerForm">
+                {% csrf_token %}
+                <div class="formContent">
+                    <div class="content-1">
+                        <div class="fields">
+                            <label for="firstName">First Name:</label>
+                            {{form.first_name}}
+                            <!-- <input type="text" name="firstName" placeholder="eg: John"> -->
+                        </div>
+                        <div class="fields">
+                            <label for="lastName">Last Name:</label>
+                            {{form.last_name}}
+                            <!-- <input type="text" name="lastName" placeholder="eg: Doe"> -->
+                        </div>
+                        <div class="fields">
+                            <label for="username">username:</label>
+                            {{form.username}}
+                            <!-- <input type="text" name="username" placeholder="eg: JohnDoe"> -->
+                        </div>
+                    </div>
+
+                    <div class="content-2">
+                        <div class="fields">
+                            <label for="email">Email:</label>
+                            {{form.email}}
+                            <!-- <input type="text" name="email" placeholder="eg: johndoe@gmail.com"> -->
+                        </div>
+                        <div class="fields">
+                            <label for="Password">Password:</label>
+                            {{form.password}}
+                            <!-- <input type="password" name="password" placeholder="••••••••"> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="btn">
+                    <button type="submit">REGISTER</button>
+                </div>
+            </form>
+            <div class="loginPrompt">
+                <p>Already have an account?</p>
+                <button id="loginBtn">Login</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="{% static 'javascript/register.js' %}"></script>
+</main>
 {% endblock%}
