--- a/templates/Base/index.html
+++ b/templates/Base/index.html
@@ -42,7 +42,7 @@
                             room
                             {% endif %}</p>
                     </div>
-                    {% if request.user.is_athenticated %}
+                    {% if request.user.is_authenticated %}
                     <button><a href="{% url 'create-room' %}">Create Room</a></button>
                     {% endif %}
                 </div>
