--- a/templates/Base/index.html
+++ b/templates/Base/index.html
@@ -32,6 +32,10 @@
             </div>
             
             <div id="roomsSection">
+                <div id="tabs">
+                    <a href="">Topics</a>
+                    <a href="">Activity</a>
+                </div>
                 <div id="heading">
                     <div id="titleContainer">
                         <h3>Rooms</h3>
