--- a/templates/Base/edit-room.html
+++ b/templates/Base/edit-room.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static 'styles/edit-room.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/edit-room1.css' %}">
 {% endblock %}
 
 {% block content %}
