--- a/templates/Base/index.html
+++ b/templates/Base/index.html
@@ -32,9 +32,14 @@
             </div>
             
             <div id="roomsSection">
-                <div id="tabs">
-                    <a href="">Topics</a>
-                    <a href="">Activity</a>
+                <div class="mobileView">
+                    <form id="searchMobile" action="" method="get">
+                        <input type="text" name="q" placeholder="Search..." id="searchInput">
+                    </form>
+                    <div id="tabs">
+                        <a href="">Topics</a>
+                        <a href="">Activity</a>
+                    </div>
                 </div>
                 <div id="heading">
                     <div id="titleContainer">
