--- a/Studybud/static/styles/edit-room.css
+++ b/Studybud/static/styles/edit-room.css
@@ -61,9 +61,10 @@ form > div > input[type=text], form textarea, form select {
 }
 
 textarea {
-    max-width: 400px !important;
-    min-height: 200px;
-    overflow: scroll;
+    max-width: 400px;
+    min-width: 400px;
+    min-height: 150px;
+    max-height: 150px;
 }
 
 button[type=submit] {
