--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
     {% include 'nav.html' %}
 
     {% if messages %}
-        <ul class="messages">
+        <ul class="alerts">
         {% for message in messages %}
             <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
         {% endfor %}
